@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2013, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -23,14 +21,15 @@
  * questions.
  */
 
-package jdk.jfr.internal.instrument;
+ // key: compiler.note.preview.filename
+ // key: compiler.note.preview.recompile
+ // key: compiler.err.cant.assign.initialized.before.ctor.called
+ // options: --enable-preview  -source ${jdk.version}
 
-import java.lang.annotation.ElementType;
-import java.lang.annotation.Retention;
-import java.lang.annotation.RetentionPolicy;
-import java.lang.annotation.Target;
-
-@Target(ElementType.METHOD)
-@Retention(RetentionPolicy.RUNTIME)
-@interface JIInstrumentationMethod {
+class CantAssignInitializedBeforeCtorCalled {
+    int x = 1;
+    CantAssignInitializedBeforeCtorCalled() {
+        x = 2;
+        super();
+    }
 }
